Fixing ligature changes on Safari.

--- a/app/styles/partials/_fonts.scss
+++ b/app/styles/partials/_fonts.scss
@@ -31,10 +31,11 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
 * {
 	font-variant-ligatures: no-common-ligatures;
 	-webkit-font-variant-ligatures: no-common-ligatures;
-	-webkit-font-feature-settings:"liga" 0;
+	//-webkit-font-feature-settings:"liga" 0;
 	font-feature-settings:"liga" 0;
 	text-rendering: optimizeSpeed;
 }
