--- a/app/styles/partials/_page.scss
+++ b/app/styles/partials/_page.scss
@@ -721,7 +721,7 @@ $btmPer:25%;
 		}
 		.footer {
 			margin-top:50px;
-			font-size:.6em;
+			font-size:.5em;
 			font-family:'Monocle-Light', sans-serif;
 			min-height:30px;
 			hr {
